fix font size inconsistencies on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ color: var(--secondary-color)!important;
 .hero-bg{
     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) , url(/assets/img/png/hero.png) center center;
     background-size: cover;
-    padding: 78px 0px 86px 0px;
+    padding: 44px 0px 86px 0px;
 }
 
 .clock{
@@ -323,9 +323,9 @@ border-radius: 22px;
     :root{
         --h1-font-size: min(max(36px, 8.6956vw), 56px);
         --h2-font-size: min(max(30px,  8.6956vw), 48px);
-        --h3-font-size: min(max(28px, 3.3333vw), 48px);
+        --h3-font-size: min(max(28px, 8.6956vw), 48px);
         --h4-font-size: min(max(24px, 8.6956vw), 42px);
-        --h5-font-size: min(max(18px, 4.3478vw), 28px);
+        --h5-font-size: min(max(18px, 5.797vw), 28px);
         --sub-heading-font-size: min(max(16px, 5.797vw), 28px);
         --body-text-font-size: min(max(14px,3.3816vw), 18px);
         --small-text-font-size: 8px;
